# readfeed

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
benchmark/: Cargo.toml
benchmark/benches/: file_data.rs
readfeed/: CHANGELOG.md  Cargo.toml  README.md
readfeed/src/: atom.rs  html.rs  lib.rs  opml.rs  rss.rs  xml.rs
readfeed/tests/resources/: atom-1.xml  html-1.html  opml-1.xml
